// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal snapshots > css mode snapshot 1`] = `
"import React, { useEffect, useId, createContext, useContext } from 'react';
import { FocusTrap } from 'focus-trap-react';
import styles from './Modal.module.css';
export type ModalVariant = 'default' | 'confirm';
export type ModalSize    = 'sm' | 'md' | 'lg';

export interface ModalProps {
  isOpen:    boolean;
  onClose:   () => void;
  title?:    string;
  children:  React.ReactNode;
  variant?:  ModalVariant;
  size?:     ModalSize;
  footer?:   React.ReactNode;
}

interface ModalContextValue {
  isOpen: boolean;
  onClose: () => void;
  size: ModalSize;
  titleId: string;
}

const ModalContext = createContext<ModalContextValue | undefined>(undefined);

const useModalContext = () => {
  const context = useContext(ModalContext);
  if (!context) throw new Error('Modal sub-components must be used within Modal');
  return context;
};

export const ModalRoot = ({
  isOpen,
  onClose,
  children,
  size = 'md',
}: {
  isOpen: boolean;
  onClose: () => void;
  children: React.ReactNode;
  size?: ModalSize;
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <ModalContext.Provider value={{ isOpen, onClose, size, titleId }}>
      <FocusTrap>
        {children as React.ReactElement}
      </FocusTrap>
    </ModalContext.Provider>
  );
};

export const ModalOverlay = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { onClose } = useModalContext();
  return (
    <div className={[styles.overlay, className].filter(Boolean).join(' ')} onClick={onClose}>
      {children}
    </div>
  );
};

export const ModalContent = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { size, titleId } = useModalContext();
  return (
    <div
      className={[styles.modal, styles[\`modal--\${size}\`], className].filter(Boolean).join(' ')}
      role="dialog"
      aria-modal="true"
      aria-labelledby={titleId}
      onClick={(e) => e.stopPropagation()}
    >
      {children}
    </div>
  );
};

export const ModalHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <header className={[styles.header, className].filter(Boolean).join(' ')}>
    {children}
  </header>
);

export const ModalTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { titleId } = useModalContext();
  return <h2 id={titleId} className={[styles.title, className].filter(Boolean).join(' ')}>{children}</h2>;
};

export const ModalClose = ({ className }: { className?: string }) => {
  const { onClose } = useModalContext();
  return (
    <button
      className={[styles.closeButton, className].filter(Boolean).join(' ')}
      onClick={onClose}
      aria-label="Close modal"
    >
      &times;
    </button>
  );
};

export const ModalBody = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.body, className].filter(Boolean).join(' ')}>
    {children}
  </div>
);

export const ModalFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <footer className={[styles.footer, className].filter(Boolean).join(' ')}>
    {children}
  </footer>
);

export const Modal = Object.assign(ModalRoot, {
  Root: ModalRoot,
  Overlay: ModalOverlay,
  Content: ModalContent,
  Header: ModalHeader,
  Title: ModalTitle,
  Close: ModalClose,
  Body: ModalBody,
  Footer: ModalFooter,
});

Modal.displayName = 'Modal';
ModalRoot.displayName = 'Modal.Root';
ModalOverlay.displayName = 'Modal.Overlay';
ModalContent.displayName = 'Modal.Content';
ModalHeader.displayName = 'Modal.Header';
ModalTitle.displayName = 'Modal.Title';
ModalClose.displayName = 'Modal.Close';
ModalBody.displayName = 'Modal.Body';
ModalFooter.displayName = 'Modal.Footer';
"
`;

exports[`Modal snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.overlay {
  --modal-overlay-bg: rgba(0, 0, 0, 0.4);
  --modal-padding: calc(var(--spacing-unit) * 6);

  position:        fixed;
  top:             0;
  left:            0;
  right:           0;
  bottom:          0;
  background-color: var(--modal-overlay-bg);
  display:         flex;
  align-items:     center;
  justify-content: center;
  z-index:         1000;
  padding:         var(--modal-padding);
}

.modal {
  --modal-radius: var(--radius-lg);
  --modal-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);

  background:      var(--color-surface);
  border-radius:   var(--modal-radius);
  box-shadow:      var(--modal-shadow);
  max-height:      calc(100vh - (var(--spacing-unit) * 10));
  display:         flex;
  flex-direction:  column;
  width:           100%;
  animation:       modalIn 0.3s ease-out;
}

@keyframes modalIn {
  from { opacity: 0; transform: scale(0.95) translateY(10px); }
  to   { opacity: 1; transform: scale(1) translateY(0); }
}

.header {
  padding:        var(--modal-padding);
  border-bottom:  1px solid var(--color-border);
  display:        flex;
  align-items:    center;
  justify-content: space-between;
}

.title {
  margin:      0;
  font-size:   1.25rem;
  font-weight: 600;
  color:       var(--color-text);
  font-family: var(--font-family);
}

.closeButton {
  background:    transparent;
  border:        none;
  font-size:     1.5rem;
  line-height:   1;
  color:         var(--color-text-muted);
  cursor:        pointer;
  padding:       calc(var(--spacing-unit) * 2);
  border-radius: var(--radius-sm);
  transition:    background 0.15s ease;
}

.closeButton:hover {
  background: var(--color-background);
  color:      var(--color-text);
}

.body {
  padding:     var(--modal-padding);
  overflow-y:  auto;
  font-family: var(--font-family);
  color:       var(--color-text);
  line-height: 1.5;
}

.footer {
  padding:       var(--modal-padding);
  border-top:    1px solid var(--color-border);
  display:       flex;
  justify-content: flex-end;
  gap:           calc(var(--spacing-unit) * 3);
}

/* Sizes */
.modal--sm { max-width: 400px; }
.modal--md { max-width: 600px; }
.modal--lg { max-width: 800px; }
"
`;

exports[`Modal snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Modal } from './Modal';
import { Button } from '../Button/Button';

const meta: Meta<typeof Modal> = {
  title: 'Crucible/Modal',
  component: Modal,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'confirm'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Modal>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Modal Title</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>This is the modal body content.</p>
              </Modal.Body>
              <Modal.Footer>
                <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
                  <button onClick={() => setIsOpen(false)}>Cancel</button>
                  <button onClick={() => setIsOpen(false)}>Confirm</button>
                </div>
              </Modal.Footer>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};

export const Confirm: Story = {
  args: { variant: 'confirm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Confirm Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Confirm Variant</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with confirm variant.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Sm Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Sm Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with sm size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Md Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Md Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with md size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Lg Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Lg Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with lg size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
"
`;

exports[`Modal snapshots > tailwind mode snapshot 1`] = `
"import React, { useEffect, useId, createContext, useContext } from 'react';
import { FocusTrap } from 'focus-trap-react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)]',
  confirm: 'bg-[var(--color-surface)] border-t-4 border-[var(--color-primary)]',
 };

const sizeClasses: Record<string, string> = {
  sm: 'max-w-md',
  md: 'max-w-lg',
  lg: 'max-w-2xl',
};

export type ModalVariant = 'default' | 'confirm';
export type ModalSize    = 'sm' | 'md' | 'lg';

interface ModalContextValue {
  isOpen: boolean;
  onClose: () => void;
  titleId: string;
  variant: ModalVariant;
  size: ModalSize;
}

const ModalContext = createContext<ModalContextValue | undefined>(undefined);

const useModalContext = () => {
  const context = useContext(ModalContext);
  if (!context) throw new Error('Modal components must be wrapped in <Modal />');
  return context;
};

export interface ModalProps {
  isOpen:   boolean;
  onClose:  () => void;
  variant?: ModalVariant;
  size?:    ModalSize;
  children: React.ReactNode;
}

const ModalRoot: React.FC<ModalProps> = ({
  isOpen,
  onClose,
  variant = 'default',
  size = 'md',
  children,
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <ModalContext.Provider value={{ isOpen, onClose, titleId, variant, size }}>
      {children}
    </ModalContext.Provider>
  );
};

const ModalOverlay: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { onClose } = useModalContext();
  return (
    <div 
      className={["fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/50 backdrop-blur-sm", className].filter(Boolean).join(' ')}
      onClick={onClose}
    >
      {children}
    </div>
  );
};

const ModalContent: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { titleId, variant, size } = useModalContext();
  return (
    <FocusTrap>
      <div
        className={[
          'w-full bg-[var(--color-surface)] rounded-[var(--radius-lg)] shadow-2xl overflow-hidden',
          variantClasses[variant],
          sizeClasses[size],
          className
        ].filter(Boolean).join(' ')}
        role="dialog"
        aria-modal="true"
        aria-labelledby={titleId}
        onClick={(e) => e.stopPropagation()}
      >
        {children}
      </div>
    </FocusTrap>
  );
};

const ModalHeader: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <header className={["flex items-center justify-between p-6 border-b border-[var(--color-border)]", className].filter(Boolean).join(' ')}>
    {children}
  </header>
);

const ModalTitle: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { titleId } = useModalContext();
  return <h2 id={titleId} className={["text-xl font-bold text-[var(--color-text)]", className].filter(Boolean).join(' ')}>{children}</h2>;
};

const ModalClose: React.FC<{ className?: string }> = ({ className }) => {
  const { onClose } = useModalContext();
  return (
    <button
      className={["text-[var(--color-text-muted)] hover:text-[var(--color-text)] transition-colors text-2xl", className].filter(Boolean).join(' ')}
      onClick={onClose}
      aria-label="Close modal"
    >
      &times;
    </button>
  );
};

const ModalBody: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <div className={["p-6 text-[var(--color-text-muted)]", className].filter(Boolean).join(' ')}>
    {children}
  </div>
);

const ModalFooter: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <footer className={["p-6 border-t border-[var(--color-border)] bg-[var(--color-background)]/50", className].filter(Boolean).join(' ')}>
    {children}
  </footer>
);

export const Modal = Object.assign(ModalRoot, {
  Root: ModalRoot,
  Overlay: ModalOverlay,
  Content: ModalContent,
  Header: ModalHeader,
  Title: ModalTitle,
  Close: ModalClose,
  Body: ModalBody,
  Footer: ModalFooter,
});

Modal.displayName = 'Modal';
ModalRoot.displayName = 'Modal.Root';
ModalOverlay.displayName = 'Modal.Overlay';
ModalContent.displayName = 'Modal.Content';
ModalHeader.displayName = 'Modal.Header';
ModalTitle.displayName = 'Modal.Title';
ModalClose.displayName = 'Modal.Close';
ModalBody.displayName = 'Modal.Body';
ModalFooter.displayName = 'Modal.Footer';
"
`;

exports[`Modal snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Modal } from './Modal';
import { Button } from '../Button/Button';

const meta: Meta<typeof Modal> = {
  title: 'Crucible/Modal',
  component: Modal,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'confirm'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Modal>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Modal Title</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>This is the modal body content.</p>
              </Modal.Body>
              <Modal.Footer>
                <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
                  <button onClick={() => setIsOpen(false)}>Cancel</button>
                  <button onClick={() => setIsOpen(false)}>Confirm</button>
                </div>
              </Modal.Footer>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};

export const Confirm: Story = {
  args: { variant: 'confirm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Confirm Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Confirm Variant</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with confirm variant.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Sm Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Sm Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with sm size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Md Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Md Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with md size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Lg Modal</button>
        <Modal {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Modal.Overlay>
            <Modal.Content>
              <Modal.Header>
                <Modal.Title>Lg Size</Modal.Title>
                <Modal.Close />
              </Modal.Header>
              <Modal.Body>
                <p>Modal content with lg size.</p>
              </Modal.Body>
            </Modal.Content>
          </Modal.Overlay>
        </Modal>
      </div>
    );
  },
};
"
`;
